# sdxl-recommended-res-calc

./: README.md  __init__.py  customnode_sdxl_recommended_res_calc.py  pyproject.toml  sdxl-recommended-res-calc.bat  sdxl-recommended-res-calc.py  sdxl-recommended-res-calc_linux.sh
.github/workflows/: publish.yml
_use-case-example-comfyui-nodes/: sdxl-recommended-res-calc_upscale-case.json
_use-case-sdxl-example-comfyui-nodes/: sdxl-recommended-res-calc_upscale-case.json
custom_nodes/: recommended_res_calc.py
scripts/: a1111_sdxl_recommended_res_calc.py
