[project]
name = "sdxl-recommended-res-calc"
description = "Input your desired output final resolution, it will automaticaly set the initial recommended SDXL ratio/size and its Upscale Factor to reach that output final resolution, also there's an option for 2x/4x reverse Upscale Factor. These all to avoid using bad/arbitary initial ratio/resolution."
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/marhensa/sdxl-recommended-res-calc"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "marhensa"
DisplayName = "sdxl-recommended-res-calc"
Icon = ""
